[tool.poetry]
name = "drug-modalities-distribution"
version = "0.1.0"
description = "Tool for linking drug modality and target localization"
authors = ["chicagollama <mariia.lomovskaia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
plotly = "^5.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
